--- a/board.html
+++ b/board.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="board.css">
 </head>
 <body>
-  <h1>Friday Night Family Bingo</h1>
+  <h1>Saturday Family Bingo</h1>
   <div id="buttons">
     <button id="generate">Generate</button>
     <button id="reset">Reset</button>
